--- a/site.css
+++ b/site.css
@@ -169,12 +169,14 @@ h1 {
     border-radius: 4px;
     height: auto;
     width: 40vw;
+    margin-bottom: 10px;
 }
 
 .spotlight > video {
     border-radius: 4px;
     height: auto;
     width: 40vw;
+    margin-bottom: 10px;
 }
 
 .spotlight h3 {
