--- a/styles/tools.css
+++ b/styles/tools.css
@@ -9,6 +9,7 @@ body {
 
 .tool-card {
     display: inline-block;
+    text-align: center;
     cursor: pointer;
     padding: 0.7rem;
     background-color: #BFBFBF;
